fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,6 @@ p {
 
 .thumb-image {
   grid-column: 1 / span 1;
-  max-width: 660px;
 }
 
 .thumb-text-1 {
@@ -425,6 +424,7 @@ p {
   }
 
   .carousel {
+    grid-column-start: 2;
     padding-left: 0;
   }
   
